💄 buttons - preventing overlap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -194,6 +194,7 @@ button, .button {
     border: 2px solid var(--highlight);
     color: var(--acc);
     background-color: var(--bg);
+    display: inline-block;
 
     text-decoration: none;
 
